Linter: update prop types to render warnings

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
   "plugins": ["prettier", "react"],
   "rules": {
     "valid-jsdoc": "error",
-    "react/prop-types": 0,
+    "react/prop-types": 'warn',
     "linebreak-style": ["error", "unix"]
   }
 }
